--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^4.5.0",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-player": "^2.10.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
